# firefox-user-installer

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Readme.md  Readme.txt  debian-build-deps.txt  debian-deps.txt  firefox.desktop
src/: CMakeLists.txt  app.cpp  app.h  gui.cpp  gui.fbp  gui.h  installer.cpp  installer.h  lib.rs  util.cpp  util.h
