[package]
name = "firefox_user_installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
directories = "4.0.1"
json = "0.12.4"
chrono = "0.4"
tempfile = "3.3.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk = "0.15.4"
