[package]
name = "firefox_user_installer"
version = "0.1.0"
edition = "2018"
description = "Downloads and runs firefox"
authors = ["degaart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
directories = "4.0.1"
json = "0.12.4"
chrono = "0.4"
tempfile = "3.3.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk = "0.15.4"

[[bin]]
name = "firefox"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "degaart"
conflicts = "firefox"
